<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/gank_meizi" />

        <!--<item-->
            <!--android:id="@+id/nav_ad_meizi"-->
            <!--android:checked="true"-->
            <!--android:icon="@drawable/picture"-->
            <!--android:title="@string/ad_meizitu" />-->

        <item
            android:id="@+id/nav_douban"
            android:icon="@drawable/bow_tie"
            android:title="@string/douban_meizi" />


        <item
            android:id="@+id/nav_huaban"
            android:icon="@drawable/flower"
            android:title="@string/huaban_meizi" />

        <item
            android:id="@+id/nav_tao"
            android:checked="true"
            android:icon="@drawable/wedding_dress"
            android:title="@string/tao_female" />

        <item
            android:id="@+id/nav_mycollect"
            android:checked="true"
            android:icon="@drawable/wedding_dress"
            android:title="@string/my_collect" />

    </group>

    <item android:title="Other">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/main_share_app" />

            <item
                android:id="@+id/nav_score"
                android:icon="@drawable/nav_socre"
                android:title="@string/main_score_app" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/high_importance"
                android:title="@string/main_about_app" />

        </menu>
    </item>

</menu>
