<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.moon.beautygirlkotlin.base.BaseViewModel" />
    </data>

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version_code"
                android:textColor="@color/primary_text"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/about_title_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:textColor="@color/secondary_text"
                    android:textIsSelectable="true"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/about_developers"
                android:textColor="@color/font_normal"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_avator_blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="moonljt521"
                    android:textColor="@color/font_normal"/>

                <TextView
                    android:id="@+id/tv_avator_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_avator_blog"
                    android:layout_below="@id/tv_avator_blog"
                    android:layout_marginTop="5dp"
                    android:text="GitHub: "
                    android:textColor="@color/font_normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tv_avator_github"
                    android:layout_toRightOf="@id/tv_avator_github"
                    android:autoLink="web"
                    android:text="https://github.com/moonljt521/BeautyGirlKotlin"
                    android:textColor="@color/font_normal"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/about_open_source_lis"
                android:textColor="@color/primary_text"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_open_source_libraries_list"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText"/>

            </RelativeLayout>

        </LinearLayout>


    </FrameLayout>
</layout>

